# cephla-image-stitcher

./: pyproject.toml
image_stitcher/registration/: tile_registration.py
