[project]
name = "image-stitcher"
version = "0.3.0"
description = "Image stitching for microscopy with GPU acceleration support."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "aicsimageio",
    "basicpy==1.2.0",
    "dask-image",
    "matplotlib",
    "napari-ome-zarr",
    "networkx",
    "numpy",
    "ome-zarr",
    "pandas",
    "psutil",
    "pydantic>=2.10.5",
    "pydantic-core>=2.27.2",
    "pydantic-settings>=2.7.1",
    "scikit-image",
    "tifffile",
    "tqdm",
    "zarr<3",
    "hyperactive==4.5.*",
    "torch",
    "torchvision",
    "pytorch-triton",
    "scipy>=1.12,<1.15",
    "scikit-learn>=1.7.2",
    "gradient-free-optimizers<=1.8.0",
]

# [tool.uv.sources]
# torch = { index = "pytorch" }
# torchvision = { index = "pytorch" }
# pytorch-triton = { index = "pytorch" }
#
# [[tool.uv.index]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/nightly/cu130"
# explicit = true
